# amap-shp

./: .env  .gitignore  README.md  pyproject.toml
code/: amap.py  download_data.ipynb  download_district_data.ipynb  make_geojson.ipynb  make_shp.ipynb  utils.py
data/: cn_border.dbf  cn_border.shp  cn_border.shx  cn_city.csv  cn_city.dbf  cn_city.shx  cn_district.dbf  cn_district.shx  cn_province.csv  cn_province.dbf  cn_province.shx  nine_line.dbf
script/: amap.py  download_city_and_nine_line.ipynb  make_province_and_border.ipynb
src/amap_shp/: __main__.py  cli.py  download_district_data.py  download_nine_line.py  download_raw_district.py  exceptions.py  make_geojson.py  make_zip.py  process_raw_district.py  typing.py  utils.py
